--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
+    <nav id="desktop-nav">
+
+    </nav>
     <script src="scrip.js"></script>
+    <h1>Hello</h1>
 </body>
 </html>
