--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
     <nav id="desktop-nav">
+        <div class="logo">Arafat Islam Zihad</div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#project">Project</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div> 
 
     </nav>
     <script src="scrip.js"></script>
-    <h1>Hello</h1>
 </body>
 </html>
